contrast error fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,7 @@ section div img {
 section div h2 {
   font-size: 1rem;
   background-color: #af4a43;
-  color: rgb(224, 224, 224);
+  color: rgb(255, 255, 255);
   margin: 0;
   padding: 1rem;
   text-align: center;
