--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -91,7 +91,7 @@ section div {
     h2 {
         font-size: 1rem;
         background-color: $secondaryColor;
-        color: rgb(224, 224, 224);
+        color: rgb(255, 255, 255);
         margin: 0;
         padding: 1rem;
         text-align: center;
